--- a/src/Components/Footer/Subfooter.css
+++ b/src/Components/Footer/Subfooter.css
@@ -23,7 +23,7 @@
     border: ridge;
     border-width: 4px;
     border-style:solid;
-    border-color: #0d1fc2;
+    border-color: rgb(18, 53, 99);
     border-top: none;
     border-left: none;
     border-right:none;
