--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -9,13 +9,10 @@
     justify-content: space-between;
     padding: 0 4rem;
     position: sticky;
-    border-bottom:#333;
-    border-style: solid;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-width: 1px;
+    
     z-index: 10;
+    box-shadow: 0 30px 30px rgba(0,0,0,0.15); 
+
     
     
 }
